--- a/public/theme.css
+++ b/public/theme.css
@@ -22,12 +22,18 @@ body {
 }
 
 .counter {
-    display: flex;
+  flex: auto;
+  width: 50%;
+}
 
-    flex: auto;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+.wrapper {
+  display: flex;
+  width: 100%;
+  height: 100%;
+
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Counter colors */
@@ -108,7 +114,8 @@ body {
     display: flex;
     height: 100%;
 
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 /* Mobile specific */
